--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,9 @@
       <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
       <!-- angular moment -->
       <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-moment/0.8.2/angular-moment.min.js"></script>
+      
+      <!-- Underscore -->
+      <script src="lib/underscore/underscore-min.js"></script>
 
     <!-- your app's js -->
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
