--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
       <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
       <!-- angular moment -->
       <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-moment/0.8.2/angular-moment.min.js"></script>
-      
+
       <!-- Underscore -->
       <script src="lib/underscore/underscore-min.js"></script>
 
@@ -35,11 +35,12 @@
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.5/ngStorage.min.js"></script>-->
     <script src="lib/ngCordova/plugins/ngStorage.min.js"></script>
     <!--<script src="lib/ngCordova/plugins/network.js"></script>-->
+    <script src="js/room.js"></script>
     <script src="js/chat.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
-	
+
 	<!-- NOT NEEDED OR USED -->
     <!-- <script src="js/local_services.js"></script> -->
     <!-- <script src="lib/firebase/firebase.js"></script>
